# gpt-commands-python

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.cfg
coder/openai/: __main__.py
coder/utils/: common.py
examples/game/: __main__.py  utils.py
src/gpt_commands/: __init__.py  client.py  introspection.py  utils.py
src/gpt_commands/example/: __main__.py
src/gpt_commands/openai/: client.py  introspection.py
src/tests/: test_introspection.py
tests/: test_introspection.py
