[metadata]
name = gpt-commands-python
version = 0.1.0
author = Roman Olshevskyi
author_email = gpt.commands.python@gmail.com
description = A python module that provides an easy way to use OpenAI GPT-4 (or 3.5) function calling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keenua/gpt-commands-python
project_urls =
    Bug Tracker = https://github.com/keenua/gpt-commands-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp >= 3.8.3
    python-dotenv >= 0.21.0
    docstring-parser >= 0.15
    dataclasses-json >= 0.5.7
    dataclasses-jsonschema >= 2.16.0

[options.packages.find]
where = src